# csv_fix

./: .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
misc/: test_case.csv
src/csv_conv/: CSVStateMachine.py  __main__.py  states.py  stats.py
src/csv_fix/: CSVStateMachine.py  __init__.py  __main__.py  csv_state_machine.py  states.py
testcase/: test_case_1.csv  test_case_4.csv
tests/: test_candidate_end_state.py  test_candidate_escape_state.py  test_field_in_qualifier_state.py  test_field_state.py  test_new_field_state.py  test_qualifier.py  test_separater.py  test_trim.py
