[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_fix"
version = "0.3.0"
description = "A command line tool for CSV file processing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["csv", "converter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pylint>=2.0",
]

[project.scripts]
csv_fix = "csv_fix.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/csv_fix"
Repository = "https://github.com/yourusername/csv_fix"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "7.0"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/csv_fix",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--disable-warnings",
    "-p",
    "no:cacheprovider",
]
markers = ["unit: Unit Test", "integration: Integration Test"]
